// import * as mod from '../../proto/dekart_pb.js'
// const proto = mod?.proto || mod

import proto from 'dekart-proto/dekart_pb'

export const AddReadmeRequest = proto.AddReadmeRequest
export const AddReadmeResponse = proto.AddReadmeResponse
export const AllowExportDatasetsRequest = proto.AllowExportDatasetsRequest
export const AllowExportDatasetsResponse = proto.AllowExportDatasetsResponse
export const ArchiveConnectionRequest = proto.ArchiveConnectionRequest
export const ArchiveConnectionResponse = proto.ArchiveConnectionResponse
export const ArchiveReportRequest = proto.ArchiveReportRequest
export const ArchiveReportResponse = proto.ArchiveReportResponse
export const AuthState = proto.AuthState
export const Action = proto.AuthState.Action
export const CancelJobRequest = proto.CancelJobRequest
export const CancelJobResponse = proto.CancelJobResponse
export const Connection = proto.Connection
export const ConnectionType = proto.ConnectionType
export const CreateConnectionRequest = proto.CreateConnectionRequest
export const CreateConnectionResponse = proto.CreateConnectionResponse
export const CreateDatasetRequest = proto.CreateDatasetRequest
export const CreateDatasetResponse = proto.CreateDatasetResponse
export const CreateFileRequest = proto.CreateFileRequest
export const CreateFileResponse = proto.CreateFileResponse
export const CreateQueryRequest = proto.CreateQueryRequest
export const CreateQueryResponse = proto.CreateQueryResponse
export const CreateReportRequest = proto.CreateReportRequest
export const CreateReportResponse = proto.CreateReportResponse
export const CreateSubscriptionRequest = proto.CreateSubscriptionRequest
export const CreateSubscriptionResponse = proto.CreateSubscriptionResponse
export const CreateWorkspaceRequest = proto.CreateWorkspaceRequest
export const CreateWorkspaceResponse = proto.CreateWorkspaceResponse
export const Dataset = proto.Dataset
export const File = proto.File
export const Status = proto.File.Status
export const ForkReportRequest = proto.ForkReportRequest
export const ForkReportResponse = proto.ForkReportResponse
export const GetConnectionListRequest = proto.GetConnectionListRequest
export const GetConnectionListResponse = proto.GetConnectionListResponse
export const GetEnvRequest = proto.GetEnvRequest
export const GetEnvResponse = proto.GetEnvResponse
export const Variable = proto.GetEnvResponse.Variable
export const GetGcpProjectListRequest = proto.GetGcpProjectListRequest
export const GetGcpProjectListResponse = proto.GetGcpProjectListResponse
export const GetInvitesRequest = proto.GetInvitesRequest
export const GetInvitesResponse = proto.GetInvitesResponse
export const GetReportAnalyticsRequest = proto.GetReportAnalyticsRequest
export const GetReportAnalyticsResponse = proto.GetReportAnalyticsResponse
export const GetStripePortalSessionRequest = proto.GetStripePortalSessionRequest
export const GetStripePortalSessionResponse = proto.GetStripePortalSessionResponse
export const GetUsageRequest = proto.GetUsageRequest
export const GetUsageResponse = proto.GetUsageResponse
export const GetUserStreamRequest = proto.GetUserStreamRequest
export const GetUserStreamResponse = proto.GetUserStreamResponse
export const GetWorkspaceRequest = proto.GetWorkspaceRequest
export const GetWorkspaceResponse = proto.GetWorkspaceResponse
export const PlanType = proto.PlanType
export const PublishReportRequest = proto.PublishReportRequest
export const PublishReportResponse = proto.PublishReportResponse
export const Query = proto.Query
export const QuerySource = proto.Query.QuerySource
export const QueryJob = proto.QueryJob
export const JobStatus = proto.QueryJob.JobStatus
export const QueryParam = proto.QueryParam
export const Type = proto.QueryParam.Type
export const Readme = proto.Readme
export const RedirectState = proto.RedirectState
export const RemoveDatasetRequest = proto.RemoveDatasetRequest
export const RemoveDatasetResponse = proto.RemoveDatasetResponse
export const RemoveReadmeRequest = proto.RemoveReadmeRequest
export const RemoveReadmeResponse = proto.RemoveReadmeResponse
export const Report = proto.Report
export const ReportAnalytics = proto.ReportAnalytics
export const ReportListRequest = proto.ReportListRequest
export const ReportListResponse = proto.ReportListResponse
export const ReportStreamRequest = proto.ReportStreamRequest
export const ReportStreamResponse = proto.ReportStreamResponse
export const RespondToInviteRequest = proto.RespondToInviteRequest
export const RespondToInviteResponse = proto.RespondToInviteResponse
export const RunAllQueriesRequest = proto.RunAllQueriesRequest
export const RunAllQueriesResponse = proto.RunAllQueriesResponse
export const RunQueryRequest = proto.RunQueryRequest
export const RunQueryResponse = proto.RunQueryResponse
export const Secret = proto.Secret
export const SetDefaultConnectionRequest = proto.SetDefaultConnectionRequest
export const SetDefaultConnectionResponse = proto.SetDefaultConnectionResponse
export const SetDiscoverableRequest = proto.SetDiscoverableRequest
export const SetDiscoverableResponse = proto.SetDiscoverableResponse
export const StreamOptions = proto.StreamOptions
export const Subscription = proto.Subscription
export const TestConnectionRequest = proto.TestConnectionRequest
export const TestConnectionResponse = proto.TestConnectionResponse
export const UpdateConnectionRequest = proto.UpdateConnectionRequest
export const UpdateConnectionResponse = proto.UpdateConnectionResponse
export const UpdateDatasetConnectionRequest = proto.UpdateDatasetConnectionRequest
export const UpdateDatasetConnectionResponse = proto.UpdateDatasetConnectionResponse
export const UpdateDatasetNameRequest = proto.UpdateDatasetNameRequest
export const UpdateDatasetNameResponse = proto.UpdateDatasetNameResponse
export const UpdateReportRequest = proto.UpdateReportRequest
export const UpdateReportResponse = proto.UpdateReportResponse
export const UpdateWorkspaceRequest = proto.UpdateWorkspaceRequest
export const UpdateWorkspaceResponse = proto.UpdateWorkspaceResponse
export const UpdateWorkspaceUserRequest = proto.UpdateWorkspaceUserRequest
export const UserUpdateType = proto.UpdateWorkspaceUserRequest.UserUpdateType
export const UpdateWorkspaceUserResponse = proto.UpdateWorkspaceUserResponse
export const User = proto.User
export const UserRole = proto.UserRole
export const UserStatus = proto.UserStatus
export const Workspace = proto.Workspace
export const WorkspaceInvite = proto.WorkspaceInvite
export const ListUsersRequest = proto.ListUsersRequest
